<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sales"
    android:id="@+id/sales">

    <TextView
        android:id="@+id/sales_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sales_name"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/mainColorLight"
        android:layout_marginTop="30dp" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sales_text"
        android:layout_marginTop="20dp"/>

    <RelativeLayout
        android:id="@+id/sales_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:layout_below="@id/calendarView">

        <TextView
            android:id="@+id/sales_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="( $ )"
            android:layout_marginRight="10dp"/>

    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/sales_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sales_info"
        android:paddingHorizontal="30dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="Sales"/>

        <TextView
            android:id="@+id/sales_total_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:text="0"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sales_total_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sales_total"
        android:paddingHorizontal="30dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="Total sales of the month"/>

        <TextView
            android:id="@+id/sales_total_month_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:text="0"/>
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/sales_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="70dp"
        android:src="@drawable/ic_add"
        android:backgroundTint="@color/mainColorLight"/>

</RelativeLayout>