<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/tab_sales"
        android:enabled="true"
        android:icon="@drawable/sales_logo"
        android:title="@string/sales_name"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/tab_bookings"
        android:enabled="true"
        android:icon="@drawable/booking_logo"
        android:title="@string/booking_name"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/tab_Employees"
        android:enabled="true"
        android:icon="@drawable/emp_logo"
        android:title="@string/employees_name"
        app:showAsAction="ifRoom"/>

</menu>